DEV-15581 - Fix for top bar not being visible if no store is present

--- a/less/theme.less
+++ b/less/theme.less
@@ -38,6 +38,7 @@
 }
 
 .template-header {
+    min-height: 35px;
     position: relative;
     width: 100%;
     z-index: 9999;
